--- a/src/GUI/Task_show.form
+++ b/src/GUI/Task_show.form
@@ -8,6 +8,7 @@
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
         <TitledBorder title="Task">
+          <ResourceString PropertyName="titleX" bundle="sk/stu/fiit/bundle.properties" key="TASK_" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
           <Font PropertyName="font" name="Segoe UI Light" size="12" style="0"/>
           <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
         </TitledBorder>
@@ -40,6 +41,7 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Name">
+              <ResourceString PropertyName="titleX" bundle="sk/stu/fiit/bundle.properties" key="TASK_N" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
               <Font PropertyName="font" name="Segoe UI Light" size="12" style="0"/>
               <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
             </TitledBorder>
@@ -94,6 +96,7 @@
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Description">
+                  <ResourceString PropertyName="titleX" bundle="sk/stu/fiit/bundle.properties" key="DESC_TASK" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                   <Font PropertyName="font" name="Segoe UI Light" size="12" style="0"/>
                   <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
                 </TitledBorder>
