--- a/src/GUI/UserTaskChart.form
+++ b/src/GUI/UserTaskChart.form
@@ -8,6 +8,7 @@
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
         <TitledBorder title="Your ToDos">
+          <ResourceString PropertyName="titleX" bundle="sk/stu/fiit/bundle.properties" key="TODOS_" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
           <Font PropertyName="font" name="Segoe UI Semibold" size="18" style="0"/>
           <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
         </TitledBorder>
